added some text

--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@ Licence URI: https://www.os-templates.com/template-terms
       <div class="sectiontitle">
         <h1> New to Motocross?</h1>
         <br>
-        <p>Dont't worry, our friendly staff will gladly assist you in finding safety gear and new bikes. We even host
+        <p>Dont't worry, our friendly staff will gladly assist you in finding safety gear and buying new bikes. We even
+          host
           regular motocross training sessions.<br><br>Our beginner tracks allow for anyone to train their motorcyle
           skills and soon partake in motocross races. <br><br></p>
         <h1>New members get a 25% off their first 3 months:</h1><a class="btn" href="#" style="margin: 10px;">Join Now
